# unityai-rs

./: Cargo.toml  README.md
src/serde/: deserializer.rs  mod.rs
tests/: Navmesh.asset.txt  de.rs
