[package]
name = "unityai"
version = "0.1.0"
authors = ["Hoping White <baihaoping@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
log = "0.4"
fern = "0.6"
chrono = "0.4"
